User space front end mostly done! Fixed search layout issue.

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -7,7 +7,7 @@
     border-color: rgb(255, 221, 129);
 }
 .btnStyle:hover{
-    background: rgb(255, 221, 129);
+    background: #ffdd81;
     color: #000 !important;
     font-weight: 500;
     border-color: rgb(253, 181, 21);
@@ -17,4 +17,13 @@
     color: #000 !important;
     font-weight: 500;
     border-color: rgb(255, 221, 129);
+}
+
+.navsettings{
+    background-image: url('https://styleguide.umbc.edu/wp-content/uploads/sites/113/2019/05/maryland-flag-background-gray.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed; /* Optional: Fixes the background during scroll */
+    margin: 0;
+    padding: 0;
 }
